# JumperlessV5

./: .gitignore  .gitmodules  .readthedocs.yaml  CSprelaunchDraft.md  Comparison-chart.md  README.md  README1.md  campaign-body copy.md  campaign-body.md  conf.py  elecrowaddress.txt  index.md  myst.yml  requirements.txt
.github/: FUNDING.yml
CodeDocs/: Build_System_Cleanup_Improvements.md
Docs/: GettingStarted.md  README_micropython.md  WritingApps.md
GithubPagesCrap/: index.md  requirements.txt
Hardware/: README.md
Jumperless23V50/: README.md
JumperlessFiles/: savedProjects.txt  slotAssignments.txt
JumperlessV5firmware/: .gitignore  .readthedocs.yaml  README.md  myst.yml  platformio.ini
JumperlessWokwiBridge/: BUILD_INSTRUCTIONS.md  Jumperless  Jumperless copy.py  Jumperless.spec  JumperlessAppPackager.py  JumperlessLinux.spec  JumperlessLinux_arm64.spec  JumperlessLinux_x64.spec  JumperlessWindows_x64.spec  JumperlessWokwiBridge.py  JumperlessWokwiBridge.spec  Packager.py  Packager_clean.py  README_AppImages.md  README_Clean_Packaging.md  README_Project_Structure.md  avrdudeCustom.conf  createDMG.sh  debug_arduino_flash.py  firmware.uf2  jumperless_cli_launcher.bat  jumperless_launcher.sh  jumperless_linux.spec  packagerRequirements.txt  packagerRequirementsNonMac.txt  pyInstallerscriptforWindows.txt  requirements-minimal.txt  requirements-optional.txt  requirements.txt  run_in_windows_terminal.bat  run_jumperless.sh  run_jumperless_terminal.bat  wokwi_extract_test.py  wokwi_response.html  wokwisource.json
RP23V50firmware/: --flags=--std=c++11  .clang-format  .clangd  .gitignore  .pioignore  APP.md  Complete_UI_Refresh_Implementation.md  DECIMATION_MODE_IMPLEMENTATION.md  Device_Manager_Exit_Crash_Fix.md  Device_Reconnection_Fix_Summary.md  Driver_Firmware_Updates_Summary.md  Jumperless_Protocol_Analysis.md  Protocol_Fix_Summary.md  README.MD  README.md  RP23V50firmware.code-workspace  Race_Condition_Fix_Summary.md  SerialWrapper_README.md  UI_Refresh_Implementation_Summary.md  UPDATE.md  WritingApps.md  (+9 more)
RP23V50firmware/lib/micropython/: CMakeLists.txt  library.json  mpconfigport.h  mphalport.c
RP23V50firmware/lib/micropython/boards/JUMPERLESS_V5/: board.json  jumperless-v5.h  mpconfigboard.h  mpconfigvariant.cmake  mpconfigvariant_RISCV.cmake
RP23V50firmware/lib/micropython/micropython_embed/: mpconfigport.h
RP23V50firmware/lib/micropython/micropython_embed/genhdr/: moduledefs.h  mpversion.h  qstrdefs.generated.h  root_pointers.h
RP23V50firmware/lib/micropython/micropython_embed/port/: embed_util.c
RP23V50firmware/lib/micropython/port/: machine_pin_jl.c  machine_uart_jl.c  micropython_embed.c  micropython_embed.h  modjumperless.c  modmachine_jl.inc  mpconfigport.h  mphalport.c  mphalport.h
(+1223 files in other folders)
